K8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgfv
  labels:
    app: sgfv
    environment: development
