K8s/kafka.yaml
# ─────────────────────────────────────────────────
# Kafka — image officielle Apache (gratuite)
# KRaft mode — pas besoin de Zookeeper
# ─────────────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: sgfv
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.0
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: sgfv
spec:
  selector:
    app: kafka
  ports:
    - name: client
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  type: ClusterIP
