K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgfv-ingress
  namespace: sgfv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sgfv.local
      http:
        paths:
          - path: /vehicules
            pathType: Prefix
            backend:
              service:
                name: service-vehicules
                port:
                  number: 8081
          - path: /conducteurs
            pathType: Prefix
            backend:
              service:
                name: service-conducteurs
                port:
                  number: 8082
          - path: /maintenances
            pathType: Prefix
            backend:
              service:
                name: service-maintenance
                port:
                  number: 8083
          - path: /localisation
            pathType: Prefix
            backend:
              service:
                name: service-localisation
                port:
                  number: 8084
          - path: /alertes
            pathType: Prefix
            backend:
              service:
                name: service-alertes
                port:
                  number: 3002
          - path: /graphql
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 4000
          - path: /auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
